Limits styling WIP - Fixed missing `limits` @imports in Snow and Maelstrom-theme files; - Added `overflow: hidden` to `gl-plot-display-area` to clip limit line labels appropriately; - Themed approach to limit line blocker color;

--- a/src/styles/_legacy-plots.scss
+++ b/src/styles/_legacy-plots.scss
@@ -136,6 +136,7 @@ mct-plot {
         left: nth($plotDisplayArea, 4);
 
         .gl-plot-display-area {
+            overflow: hidden;
             position: absolute;
             top: 0;
             right: 0;
